# langchain_llm_summarize

./: .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  settings.toml
.github/workflows/: ci.yml
src/: config.py  logger.py  main.py  models.py  service_llm.py
src/router/: healthcheck.py  llm.py  setup.py
tests/: conftest.py  test_service_llm.py
tests/router/: test_healthcheck.py  test_llm.py
